# quantel-pad-usb-interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: connector.md  index.md  keyboard_AKE079339.md  packet.md
src/: cdc.c  cdc.h  commands.c  commands.h  config.h.in  flash_config.c  flash_config.h  hid.c  hid.h  inverted_uart_rx.pio  inverted_uart_tx.pio  main.c  serial.c  serial.h
src/quantel/: kbd_ake0793091.h  kbd_ake079339.h  quantel.c  quantel.h  test_data.h  test_data2.h
src/usb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_quantel.c  usb_quantel.h
